# rgbn

./: .gitignore  .readthedocs.yaml  README.md  image_processing.ipynb  index.md  pyproject.toml
.github/worflows/: docs.yml
docs/: requirements.txt
docs/source/: blue_sampler.rst  conf.py  index.md  modules.rst
src/blue_sampler/: __init__.py  api.py  datasets.py  math.py  progress.py  viz.py  warm_start.py
src/blue_sampler/grad/: fields.py  im2fields.py  kernels.py
src/blue_sampler/momentum/: momentum.py  momentum_clusters.py  momentum_polygons.py
src/blue_sampler/run/: run_bruteforce.py  run_clusters.py  run_recursive.py  run_tessels.py
