[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name        = "blue_sampler"
version     = "0.1.16"
description = "Large points sampling on the unit torus [0, 1)^D, either with uniform blue noise propriety (vanishing density fluctuations) or with target density (stippling)"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "blue noise",
    "stealthy",
    "point process",
    "sampling",
    "structure_factor",
    "stippling"
]

dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "matplotlib",
    "requests",
    "squarenet",
]

[project.urls]
"Homepage" = "https://github.com/For-a-few-DPPs-more/rgbn"
"Source" = "https://github.com/For-a-few-DPPs-more/rgbn"
"Documentation" = "https://blue_sampler.readthedocs.io"
"Colab"  = "https://colab.research.google.com/github.com/For-a-few-DPPs-more/rgbn/blob/main/examples.ipynb"
PyPI = "https://pypi.org/project/blue_sampler/"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_sampler"]

[tool.ruff]
line-length = 100