[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name        = "blue_sampler"
version     = "0.1.18"
description = "Stealthy point-pattern sampling on the unit torus"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "blue noise",
    "stealthy",
    "point process",
    "sampling",
]

dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "matplotlib",
    "requests",
    "squarenet",
]

[project.urls]
Repository = "https://github.com/For-a-few-DPPs-more/rgbn"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_sampler"]

[tool.ruff]
line-length = 100